Adjust columns in work
Added image to work section case studies. Tried to adjust the column size in My Work section

--- a/index.html
+++ b/index.html
@@ -61,27 +61,32 @@
 
 <!-- My Work Start-->
         <section class="myWork">
-            <h1 class="myWork-title">M Y     W O R K</h1>
             <div class="workGrid">
                 <div>
+                    <h1 class="myWork-title">M Y     W O R K</h1>
+                </div>
+                
+                <div>
+                    <div class="rootApp img">
+                        <img src="Image/Screen Shot 2021-07-24 at 8.54.34 PM.png" alt="">
+                    </div>
                     <h4></h4>
                     <p></p>
                     <button></button>
                 </div>
 
-                <div>
-                    <img src="" alt="">
-                </div>
+               
 
                 <div>
+                    <div class="websiteRedesign img">
+                        <img src="Image/Screen Shot 2021-07-24 at 8.55.32 PM.png" alt="">
+                    </div>
                     <h4></h4>
                     <p></p>
                     <button></button>
                 </div>
-                <div>
-                    <img src="" alt="">
-                </div>
-            <h3>View all projects</h3>
+
+            <button>View all projects</button>
             </div>
         </section>
 <!-- My Work End-->
