Added titles to "My work" buttons

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <h4></h4>
                     <p></p>
-                    <button></button>
+                    <button>Root</button>
                 </div>
 
                
@@ -83,7 +83,7 @@
                     </div>
                     <h4></h4>
                     <p></p>
-                    <button></button>
+                    <button>Lighthouse CFL</button>
                 </div>
 
             <button>View all projects</button>
